--- a/config.ini
+++ b/config.ini
@@ -51,6 +51,7 @@ default_output_activation = tanh
 relu_clip_at              = 1
 
 # RUNTIME
+seed                     = 1212 # 0 for random? to implement
 parallelize              = False
 parallelization          = 6
 population_save_interval = 10
