si vola, sistemare reproduction count

--- a/config.ini
+++ b/config.ini
@@ -4,7 +4,7 @@
 [DEFAULT]
 # EVOLUTION
 generations            = 5
-population_size        = 20
+population_size        = 50
 global_mutation_enable = False
 global_mutation_chance = 0.5
 global_mutation_factor = 0.5
@@ -21,14 +21,14 @@ refractory_factor      = 0.33
 elites_per_species        = 1
 min_species               = 3
 target_species            = 10
-max_stagnation            = 20
-weak_threshold            = 0.5
+max_stagnation            = 20 # to be implemented
+weak_threshold            = -0.5
 keep_best_percentage      = 0.5
 allow_interspecies_mating = False
 interspecies_mating_count = 10
 
 #  DISTANCE
-distance_threshold          = 2.0
+distance_threshold          = 1.875
 distance_adj_factor         = 0.25
 disjoint_coefficient        = 1.0
 excess_coefficient          = 1.0
@@ -54,7 +54,7 @@ default_output_activation = tanh
 relu_clip_at              = 1
 
 # RUNTIME
-seed                     = 1212 # 0 for random? to implement
+seed                     = 1212 # 0 for random? to be implemented
 parallelize              = False
 parallelization          = 6
 population_save_interval = 10
