--- a/config.ini
+++ b/config.ini
@@ -13,7 +13,7 @@ global_mutation_factor = 0.5
 input_neurons          = 24
 hidden_neurons         = 1
 output_neurons         = 4
-initial_conn_attempts  = 200
+initial_conn_attempts  = 45
 attempts_to_max_factor = 5
 refractory_factor      = 0.33
 
@@ -21,14 +21,14 @@ refractory_factor      = 0.33
 elites_per_species        = 1
 min_species               = 3
 target_species            = 10
-max_stagnation            = 20 # to be implemented
+max_stagnation            = 20
 weak_threshold            = -0.5
 keep_best_percentage      = 0.33
 allow_interspecies_mating = False
 interspecies_mating_count = 2
 
 #  DISTANCE
-distance_threshold          = 2.5
+distance_threshold          = 2.25
 distance_adj_factor         = 0.125
 disjoint_coefficient        = 1.0
 excess_coefficient          = 1.0
@@ -36,22 +36,24 @@ weight_diff_coefficient     = 1.0
 activation_diff_coefficient = 1.0
 
 # CONNECTION GENE MUTATION
-gene_add_chance      = 0.02
-gene_toggle_chance   = 0.002
-weight_mutate_chance = 0.1
-weight_mutate_factor = 0.5
-weight_init_range    = -100.0, 100.0
+gene_add_chance              = 0.1
+gene_toggle_chance           = 0.01
+weight_mutate_chance         = 0.2
+weight_mutate_factor         = 0.5
+weight_init_range            = -100.0, 100.0
+weight_perturb_vs_set_chance = 0.75
 
 # NEURON GENE MUTATION
-neuron_add_chance         = 0.01
-neuron_toggle_chance      = 0.001
-bias_mutate_chance        = 0.1
-bias_mutate_factor        = 0.5
-bias_init_range           = -100.0, 100.0
-activation_mutate_chance  = 0.01
-default_hidden_activation = clipped_relu
-default_output_activation = tanh
-relu_clip_at              = 1
+neuron_add_chance          = 0.05
+neuron_toggle_chance       = 0.005
+bias_mutate_chance         = 0.2
+bias_mutate_factor         = 0.5
+bias_init_range            = -100.0, 100.0
+bias_perturb_vs_set_chance = 0.75
+activation_mutate_chance   = 0.01
+default_hidden_activation  = clipped_relu
+default_output_activation  = tanh
+relu_clip_at               = 1
 
 # RUNTIME
 seed                     = 1212 # 0 for random? to be implemented
