--- a/config.ini
+++ b/config.ini
@@ -36,12 +36,13 @@ weight_diff_coefficient     = 1.0
 activation_diff_coefficient = 1.0
 
 # CONNECTION GENE MUTATION
-gene_add_chance              = 0.1
-gene_toggle_chance           = 0.01
-weight_mutate_chance         = 0.2
-weight_mutate_factor         = 0.5
-weight_init_range            = -100.0, 100.0
-weight_perturb_vs_set_chance = 0.75
+connection_add_chance               = 0.1
+connection_toggle_chance            = 0.01
+matching_disabled_connection_chance = 1.0
+weight_mutate_chance                = 0.2
+weight_mutate_factor                = 0.5
+weight_init_range                   = -100.0, 100.0
+weight_perturb_vs_set_chance        = 0.75
 
 # NEURON GENE MUTATION
 neuron_add_chance          = 0.05
