--- a/config.ini
+++ b/config.ini
@@ -18,14 +18,14 @@ attempts_to_max_factor = 5
 refractory_factor      = 0.33
 
 # SPECIES
-elites_per_species        = 1
-min_species               = 3
-target_species            = 10
-max_stagnation            = 20
-weak_threshold            = 0.33
-keep_best_percentage      = 0.33
-allow_interspecies_mating = False
-interspecies_mating_count = 2
+elites_per_species           = 1
+min_species                  = 2
+target_species               = 5
+max_stagnation               = 20
+keep_best_species            = 0.6
+keep_best_genomes_in_species = 0.4
+allow_interspecies_mating    = False
+interspecies_mating_count    = 2
 
 #  DISTANCE
 distance_threshold          = 2.25
