--- a/config.ini
+++ b/config.ini
@@ -3,8 +3,8 @@
 
 [DEFAULT]
 # EVOLUTION
-generations            = 10
-population_size        = 200
+generations            = 20
+population_size        = 50
 global_mutation_enable = False
 global_mutation_chance = 0.5
 global_mutation_factor = 0.5
@@ -22,7 +22,7 @@ elites_per_species           = 1
 min_species                  = 2
 target_species               = 5
 max_stagnation               = 20
-keep_best_species            = 0.6
+keep_best_species            = 0.8
 keep_best_genomes_in_species = 0.4
 allow_interspecies_mating    = False
 interspecies_mating_count    = 2
@@ -58,6 +58,7 @@ relu_clip_at               = 1
 
 # RUNTIME
 seed                     = 1212 # 0 for random? to be implemented
+fitness_offset           = 0.0
 parallelize              = False
 parallelization          = 6
 population_save_interval = 10
