activation func refactor

--- a/config.ini
+++ b/config.ini
@@ -14,7 +14,7 @@ input_neurons          = 24
 hidden_neurons         = 2
 output_neurons         = 4
 initial_conn_attempts  = 1000
-refractory_factor      = 0.33
+refractory_factor      = 0.5
 
 # SPECIES
 elites_per_species           = 2
@@ -52,8 +52,8 @@ bias_mutate_factor         = 0.5
 bias_init_range            = -100.0, 100.0
 bias_perturb_vs_set_chance = 0.75
 activation_mutate_chance   = 0.01
-default_hidden_activation  = clipped_relu
-default_output_activation  = tanh
+default_hidden_activation  = brain_sigmoid
+default_output_activation  = softsign
 relu_clip_at               = 1
 
 # RUNTIME
