--- a/config.ini
+++ b/config.ini
@@ -3,13 +3,13 @@
 
 [DEFAULT]
 # EVOLUTION
-generations            = 100
-population_size        = 50
+generations            = 200
+population_size        = 1000
 fitness_offset         = 200.0
 
 # NEURAL NETWORK
 input_neurons          = 24
-hidden_neurons         = 10
+hidden_neurons         = 1
 output_neurons         = 4
 initial_conn_attempts  = 1000
 refractory_factor      = 0.5
@@ -19,35 +19,35 @@ elites_per_species           = 2
 min_species                  = 2
 target_species               = 3
 max_stagnation               = 20
-keep_best_species            = 1.0
+keep_best_species            = 0.9
 keep_best_genomes_in_species = 0.66
 allow_interspecies_mating    = False
 interspecies_mating_count    = 2
 
 #  DISTANCE
-distance_threshold          = 9.0
-distance_adj_factor         = 0.125
-disjoint_coefficient        = 4.0
-excess_coefficient          = 3.0
-weight_diff_coefficient     = 1.0
-activation_diff_coefficient = 2.0
+distance_threshold          = 10
+distance_adj_factor         = 0.75
+disjoint_coefficient        = 3.0
+excess_coefficient          = 2.0
+weight_diff_coefficient     = 1.5
+activation_diff_coefficient = 1.0
 
 # CONNECTION GENE MUTATION
 attempts_to_max_factor              = 2
-connection_add_chance               = 0.9
+connection_add_chance               = 0.95
 connection_toggle_chance            = 0.001
 matching_disabled_connection_chance = 1.0
-weight_mutate_chance                = 0.4
+weight_mutate_chance                = 0.75
 weight_mutate_factor                = 0.5
-weight_init_range                   = -100.0, 100.0
+weight_init_range                   = -10.0, 10.0
 weight_perturb_vs_set_chance        = 0.75
 
 # NEURON GENE MUTATION
-neuron_add_chance          = 0.005
-neuron_toggle_chance       = 0.0025
-bias_mutate_chance         = 0.4
+neuron_add_chance          = 0.01
+neuron_toggle_chance       = 0.005
+bias_mutate_chance         = 0.75
 bias_mutate_factor         = 0.5
-bias_init_range            = -100.0, 100.0
+bias_init_range            = -10.0, 10.0
 bias_perturb_vs_set_chance = 0.75
 activation_mutate_chance   = 0.01
 default_hidden_activation  = brain_sigmoid
@@ -56,6 +56,9 @@ relu_clip_at               = 1
 
 # RUNTIME
 seed                     = 1212 # 0 for random? to be implemented
-parallelize              = False
+
+# dumb, serial, parallel
+mode                     = dumb
+
 parallelization          = 6
 population_save_interval = 10
