--- a/config.ini
+++ b/config.ini
@@ -4,7 +4,7 @@
 [DEFAULT]
 # EVOLUTION
 generations            = 200
-population_size        = 1000
+population_size        = 100
 fitness_offset         = 200.0
 
 # NEURAL NETWORK
@@ -18,15 +18,16 @@ refractory_factor      = 0.5
 elites_per_species           = 2
 min_species                  = 2
 target_species               = 3
+init_species_stabilization   = 10
 max_stagnation               = 20
-keep_best_species            = 0.9
+keep_best_species            = 1
 keep_best_genomes_in_species = 0.66
 allow_interspecies_mating    = False
 interspecies_mating_count    = 2
 
 #  DISTANCE
 distance_threshold          = 10
-distance_adj_factor         = 0.75
+distance_adj_factor         = 0.25
 disjoint_coefficient        = 3.0
 excess_coefficient          = 2.0
 weight_diff_coefficient     = 1.5
@@ -34,7 +35,7 @@ activation_diff_coefficient = 1.0
 
 # CONNECTION GENE MUTATION
 attempts_to_max_factor              = 2
-connection_add_chance               = 0.95
+connection_add_chance               = 0.9
 connection_toggle_chance            = 0.001
 matching_disabled_connection_chance = 1.0
 weight_mutate_chance                = 0.75
@@ -55,7 +56,9 @@ default_output_activation  = softsign
 relu_clip_at               = 1
 
 # RUNTIME
-seed                     = 1212 # 0 for random? to be implemented
+
+# 0 for random? to be implemented
+seed                     = 1212
 
 # dumb, serial, parallel
 mode                     = dumb
