--- a/config.ini
+++ b/config.ini
@@ -17,7 +17,7 @@ refractory_factor      = 0.5
 # SPECIES
 elites_per_species           = 2
 min_species                  = 2
-target_species               = 3
+target_species               = 10
 init_species_stabilization   = 10
 max_stagnation               = 20
 keep_best_species            = 1
@@ -40,15 +40,15 @@ connection_toggle_chance            = 0.001
 matching_disabled_connection_chance = 1.0
 weight_mutate_chance                = 0.75
 weight_mutate_factor                = 0.5
-weight_init_range                   = -10.0, 10.0
+weight_init_range                   = -1.0, 1.0
 weight_perturb_vs_set_chance        = 0.75
 
 # NEURON GENE MUTATION
-neuron_add_chance          = 0.01
-neuron_toggle_chance       = 0.005
+neuron_add_chance          = 0.02
+neuron_toggle_chance       = 0.01
 bias_mutate_chance         = 0.75
 bias_mutate_factor         = 0.5
-bias_init_range            = -10.0, 10.0
+bias_init_range            = -1.0, 1.0
 bias_perturb_vs_set_chance = 0.75
 activation_mutate_chance   = 0.01
 default_hidden_activation  = brain_sigmoid
@@ -60,7 +60,7 @@ relu_clip_at               = 1
 # 0 for random? to be implemented
 seed                     = 1212
 
-# dumb, serial, parallel
+# serial, parallel, dumb
 mode                     = dumb
 
 parallelization          = 6
