--- a/config.ini
+++ b/config.ini
@@ -61,7 +61,7 @@ relu_clip_at               = 1
 seed                     = 1212
 
 # serial, parallel, dumb
-mode                     = dumb
+mode                     = serial
 
 parallelization          = 6
 population_save_interval = 10
