--- a/config.ini
+++ b/config.ini
@@ -3,8 +3,8 @@
 
 [DEFAULT]
 # EVOLUTION
-generations            = 200
-population_size        = 100
+generations            = 20
+population_size        = 30
 fitness_offset         = 200.0
 
 # NEURAL NETWORK
@@ -17,7 +17,7 @@ refractory_factor      = 0.5
 # SPECIES
 elites_per_species           = 2
 min_species                  = 2
-target_species               = 10
+target_species               = 5
 init_species_stabilization   = 10
 max_stagnation               = 20
 keep_best_species            = 1
@@ -39,19 +39,19 @@ connection_add_chance               = 0.9
 connection_toggle_chance            = 0.001
 matching_disabled_connection_chance = 1.0
 weight_mutate_chance                = 0.75
-weight_mutate_factor                = 0.5
+weight_mutate_factor                = 0.25
 weight_init_range                   = -1.0, 1.0
-weight_perturb_vs_set_chance        = 0.75
+weight_perturb_vs_set_chance        = 0.50
 
 # NEURON GENE MUTATION
-neuron_add_chance          = 0.02
+neuron_add_chance          = 0.1
 neuron_toggle_chance       = 0.01
 bias_mutate_chance         = 0.75
-bias_mutate_factor         = 0.5
+bias_mutate_factor         = 0.25
 bias_init_range            = -1.0, 1.0
-bias_perturb_vs_set_chance = 0.75
-activation_mutate_chance   = 0.01
-default_hidden_activation  = brain_sigmoid
+bias_perturb_vs_set_chance = 0.50
+activation_mutate_chance   = 0.05
+default_hidden_activation  = clipped_relu
 default_output_activation  = softsign
 relu_clip_at               = 1
 
