--- a/config.ini
+++ b/config.ini
@@ -4,12 +4,12 @@
 [DEFAULT]
 # EVOLUTION
 generations            = 20
-population_size        = 30
+population_size        = 50
 fitness_offset         = 200.0
 
 # NEURAL NETWORK
 input_neurons          = 24
-hidden_neurons         = 1
+hidden_neurons         = 8
 output_neurons         = 4
 initial_conn_attempts  = 1000
 refractory_factor      = 0.5
@@ -61,7 +61,7 @@ relu_clip_at               = 1
 seed                     = 1212
 
 # serial, parallel, dumb
-mode                     = serial
+mode                     = parallel
 
-parallelization          = 6
+parallelization          = 16
 population_save_interval = 10
