--- a/config.ini
+++ b/config.ini
@@ -3,16 +3,16 @@
 
 [DEFAULT]
 # EVOLUTION
-generations            = 20
-population_size        = 50
-fitness_offset         = 200.0
+generations     = 20
+population_size = 50
+fitness_offset  = 200.0
 
 # NEURAL NETWORK
-input_neurons          = 24
-hidden_neurons         = 8
-output_neurons         = 4
-initial_conn_attempts  = 1000
-refractory_factor      = 0.5
+input_neurons       = 24
+hidden_neurons      = 8
+output_neurons      = 4
+initial_connections = 150
+refractory_factor   = 0.5
 
 # SPECIES
 elites_per_species           = 2
@@ -34,9 +34,10 @@ weight_diff_coefficient     = 1.5
 activation_diff_coefficient = 1.0
 
 # CONNECTION GENE MUTATION
-attempts_to_max_factor              = 2
-connection_add_chance               = 0.9
-connection_toggle_chance            = 0.001
+connection_attempts                 = 2500
+max_to_attempts_factor              = 3
+connection_add_chance               = 0.2
+connection_toggle_chance            = 0.01
 matching_disabled_connection_chance = 1.0
 weight_mutate_chance                = 0.75
 weight_mutate_factor                = 0.25
