--- a/config.ini
+++ b/config.ini
@@ -3,22 +3,21 @@
 
 [DEFAULT]
 # EVOLUTION
-generations     = 20
-population_size = 50
+generations     = 5
+population_size = 500
 fitness_offset  = 200.0
 
 # NEURAL NETWORK
-input_neurons       = 24
-hidden_neurons      = 8
-output_neurons      = 4
-initial_connections = 150
-refractory_factor   = 0.5
+input_neurons             = 24
+hidden_neurons            = 14
+output_neurons            = 4
+initial_connections_quota = 1
+refractory_factor         = 0.33
 
 # SPECIES
 elites_per_species           = 2
 min_species                  = 2
-target_species               = 5
-init_species_stabilization   = 10
+target_species               = 10
 max_stagnation               = 20
 keep_best_species            = 1
 keep_best_genomes_in_species = 0.66
@@ -26,34 +25,35 @@ allow_interspecies_mating    = False
 interspecies_mating_count    = 2
 
 #  DISTANCE
-distance_threshold          = 10
-distance_adj_factor         = 0.25
+distance_threshold          = 4.6
+init_species_stabilization  = 3
+init_species_max_tries      = 15
+distance_adj_factor         = 0.0625
 disjoint_coefficient        = 3.0
 excess_coefficient          = 2.0
 weight_diff_coefficient     = 1.5
 activation_diff_coefficient = 1.0
 
 # CONNECTION GENE MUTATION
-connection_attempts                 = 2500
 max_to_attempts_factor              = 3
 connection_add_chance               = 0.2
-connection_toggle_chance            = 0.01
+connection_toggle_chance            = 0.02
 matching_disabled_connection_chance = 1.0
 weight_mutate_chance                = 0.75
-weight_mutate_factor                = 0.25
-weight_init_range                   = -1.0, 1.0
+max_abs_weight_mutate_factor        = 1.5
+weight_init_range                   = -100.0, 100.0
 weight_perturb_vs_set_chance        = 0.50
 
 # NEURON GENE MUTATION
 neuron_add_chance          = 0.1
 neuron_toggle_chance       = 0.01
 bias_mutate_chance         = 0.75
-bias_mutate_factor         = 0.25
-bias_init_range            = -1.0, 1.0
+max_abs_bias_mutate_factor = 1.5
+bias_init_range            = -100.0, 100.0
 bias_perturb_vs_set_chance = 0.50
 activation_mutate_chance   = 0.05
-default_hidden_activation  = clipped_relu
-default_output_activation  = softsign
+initial_hidden_activation  = brain_sigmoid
+initial_output_activation  = softsign
 relu_clip_at               = 1
 
 # RUNTIME
@@ -62,7 +62,7 @@ relu_clip_at               = 1
 seed                     = 1212
 
 # serial, parallel, dumb
-mode                     = parallel
+mode                     = serial
 
 parallelization          = 16
 population_save_interval = 10
