--- a/config.ini
+++ b/config.ini
@@ -58,7 +58,7 @@ relu_clip_at               = 1
 
 # RUNTIME
 
-# 0 for random? to be implemented
+# to be implemented
 seed                     = 1212
 
 # serial, parallel, dumb
