fixed torch output

--- a/config.ini
+++ b/config.ini
@@ -62,7 +62,7 @@ relu_clip_at               = 1
 seed                     = 1212
 
 # serial, parallel, dumb
-mode                     = serial
+mode                     = parallel
 
-parallelization          = 16
+parallelization          = 10
 population_save_interval = 10
