connection and tensor detach fix

--- a/config.ini
+++ b/config.ini
@@ -12,7 +12,7 @@ input_neurons             = 24
 hidden_neurons            = 14
 output_neurons            = 4
 initial_connections_quota = 1
-refractory_factor         = 0.33
+refractory_factor         = 0.66
 
 # SPECIES
 elites_per_species           = 2
@@ -35,14 +35,14 @@ weight_diff_coefficient     = 1.5
 activation_diff_coefficient = 1.0
 
 # CONNECTION GENE MUTATION
-max_to_attempts_factor              = 3
+max_to_attempts_factor              = 4
 connection_add_chance               = 0.2
 connection_toggle_chance            = 0.02
 matching_disabled_connection_chance = 1.0
 weight_mutate_chance                = 0.75
 max_abs_weight_mutate_factor        = 1.5
 weight_init_range                   = -100.0, 100.0
-weight_perturb_vs_set_chance        = 0.50
+weight_perturb_vs_set_chance        = 0.75
 
 # NEURON GENE MUTATION
 neuron_add_chance          = 0.1
@@ -50,7 +50,7 @@ neuron_toggle_chance       = 0.01
 bias_mutate_chance         = 0.75
 max_abs_bias_mutate_factor = 1.5
 bias_init_range            = -100.0, 100.0
-bias_perturb_vs_set_chance = 0.50
+bias_perturb_vs_set_chance = 0.75
 activation_mutate_chance   = 0.05
 initial_hidden_activation  = brain_sigmoid
 initial_output_activation  = softsign
@@ -62,7 +62,7 @@ relu_clip_at               = 1
 seed                     = 1212
 
 # serial, parallel, dumb
-mode                     = parallel
+mode                     = serial
 
 parallelization          = 10
 population_save_interval = 10
