--- a/config.ini
+++ b/config.ini
@@ -3,9 +3,10 @@
 
 [DEFAULT]
 # EVOLUTION
-generations     = 1000
-population_size = 400
-fitness_offset  = 200.0
+generations       = 10000
+population_size   = 50
+fitness_offset    = 200.0
+environment_steps = 500
 
 # NEURAL NETWORK
 input_neurons             = 24
