to lunar lander

--- a/config.ini
+++ b/config.ini
@@ -3,20 +3,20 @@
 
 [DEFAULT]
 # EVOLUTION
-generations       = 500
-population_size   = 100
-fitness_offset    = 200.0
+generations       = 10
+population_size   = 10
+fitness_offset    = 400.0
 environment_steps = 500
 
 # NEURAL NETWORK
-input_neurons             = 24
+input_neurons             = 9
 hidden_neurons            = 1
 output_neurons            = 4
 initial_connections_quota = 1
 refractory_factor         = 0.66
 
 # SPECIES
-elites_per_species           = 2
+elites_per_species           = 1
 min_species                  = 2
 target_species               = 6
 max_stagnation               = 20
@@ -26,18 +26,18 @@ allow_interspecies_mating    = False
 interspecies_mating_count    = 2
 
 #  DISTANCE
-distance_threshold          = 10
+distance_threshold          = 4
 init_species_stabilization  = 3
 init_species_max_tries      = 15
 distance_adj_factor         = 0.125
-disjoint_coefficient        = 1.0
-excess_coefficient          = 1.0
-weight_diff_coefficient     = 1.0
-activation_diff_coefficient = 1.0
+disjoint_coefficient        = 3.0
+excess_coefficient          = 2.0
+weight_diff_coefficient     = 4.0
+activation_diff_coefficient = 5.0
 
 # CONNECTION GENE MUTATION
 max_to_attempts_factor              = 5
-connection_add_chance               = 0.66
+connection_add_chance               = 0.75
 connection_toggle_chance            = 0.01
 matching_disabled_connection_chance = 0.75
 weight_mutate_chance                = 0.75
@@ -46,15 +46,15 @@ weight_init_range                   = -1.0, 1.0
 weight_perturb_vs_set_chance        = 0.75
 
 # NEURON GENE MUTATION
-neuron_add_chance          = 0.033
-neuron_toggle_chance       = 0.0033
+neuron_add_chance          = 0.04
+neuron_toggle_chance       = 0.005
 bias_mutate_chance         = 0.75
 max_abs_bias_mutate_factor = 1.5
 bias_init_range            = -1.0, 1.0
 bias_perturb_vs_set_chance = 0.75
 activation_mutate_chance   = 0.1
 initial_hidden_activation  = brain_sigmoid
-initial_output_activation  = softsign
+initial_output_activation  = identity
 relu_clip_at               = 1
 
 # RUNTIME
