seeding and generation tracking

--- a/config.ini
+++ b/config.ini
@@ -3,13 +3,13 @@
 
 [DEFAULT]
 # EVOLUTION
-generations       = 10
-population_size   = 10
+generations       = 200
+population_size   = 200
 fitness_offset    = 400.0
 environment_steps = 500
 
 # NEURAL NETWORK
-input_neurons             = 9
+input_neurons             = 8
 hidden_neurons            = 1
 output_neurons            = 4
 initial_connections_quota = 1
@@ -18,7 +18,7 @@ refractory_factor         = 0.66
 # SPECIES
 elites_per_species           = 1
 min_species                  = 2
-target_species               = 6
+target_species               = 3
 max_stagnation               = 20
 keep_best_species            = 1
 keep_best_genomes_in_species = 0.66
@@ -60,10 +60,10 @@ relu_clip_at               = 1
 # RUNTIME
 
 # to be implemented
-seed                     = 1212
+environment_seed         = 1212
 
 # serial, parallel, dumb
-mode                     = serial
+run_mode                 = serial
 
 parallelization          = 10
 population_save_interval = 10
