--- a/config.ini
+++ b/config.ini
@@ -3,8 +3,8 @@
 
 [DEFAULT]
 # EVOLUTION
-generations       = 200
-population_size   = 200
+generations       = 400
+population_size   = 400
 fitness_offset    = 400.0
 environment_steps = 500
 
@@ -58,12 +58,11 @@ initial_output_activation  = identity
 relu_clip_at               = 1
 
 # RUNTIME
-
-# to be implemented
-environment_seed         = 1212
-
 # serial, parallel, dumb
 run_mode                 = serial
-
 parallelization          = 10
+
+# None, human, rgb_array
+render_mode              = None
+environment_seed         = 1212
 population_save_interval = 10
