--- a/config.ini
+++ b/config.ini
@@ -59,7 +59,7 @@ relu_clip_at               = 1
 
 # RUNTIME
 # serial, parallel, dumb
-run_mode                 = serial
+run_mode                 = parallel
 parallelization          = 10
 
 # None, human, rgb_array
