ongoing fix deep copy and IDs

--- a/config.ini
+++ b/config.ini
@@ -3,8 +3,8 @@
 
 [DEFAULT]
 # EVOLUTION
-generations       = 250
-population_size   = 40
+generations       = 5
+population_size   = 50
 fitness_offset    = 1000
 environment_steps = 500
 
@@ -59,7 +59,7 @@ relu_clip_at               = 1
 
 # RUNTIME
 # serial, parallel, dumb
-run_mode                 = parallel
+run_mode                 = serial
 parallelization          = 8
 
 # None, human, rgb_array
