--- a/config.ini
+++ b/config.ini
@@ -42,7 +42,7 @@ connection_toggle_chance            = 0.01
 matching_disabled_connection_chance = 0.75
 weight_mutate_chance                = 0.75
 max_abs_weight_mutate_factor        = 1.5
-weight_init_range                   = -100.0, 100.0
+weight_init_range                   = -1.0, 1.0
 weight_perturb_vs_set_chance        = 0.75
 
 # NEURON GENE MUTATION
@@ -50,11 +50,13 @@ neuron_add_chance          = 0.0033
 neuron_toggle_chance       = 0
 bias_mutate_chance         = 0.75
 max_abs_bias_mutate_factor = 1.5
-bias_init_range            = -100.0, 100.0
+bias_init_range            = -1.0, 1.0
 bias_perturb_vs_set_chance = 0.75
 activation_mutate_chance   = 0.1
-initial_hidden_activation  = brain_sigmoid
-initial_output_activation  = identity
+default_hidden_activation  = random
+mutate_hidden_activation   = True
+default_output_activation  = identity
+mutate_output_activation   = False
 relu_clip_at               = 1
 
 # RUNTIME
