--- a/config.ini
+++ b/config.ini
@@ -3,8 +3,8 @@
 
 [DEFAULT]
 # EVOLUTION
-generations       = 5
-population_size   = 50
+generations       = 200
+population_size   = 500
 fitness_offset    = 1000
 environment_steps = 500
 
@@ -61,7 +61,7 @@ relu_clip_at               = 1
 
 # RUNTIME
 # serial, parallel, dumb
-run_mode                 = serial
+run_mode                 = parallel
 parallelization          = 8
 
 # None, human, rgb_array
