--- a/config.ini
+++ b/config.ini
@@ -50,11 +50,11 @@ neuron_add_chance          = 0.0033
 neuron_toggle_chance       = 0
 bias_mutate_chance         = 0.75
 max_abs_bias_mutate_factor = 1.5
-bias_init_range            = -1.0, 1.0
+bias_init_range            = -100.0, 100.0
 bias_perturb_vs_set_chance = 0.75
 activation_mutate_chance   = 0.1
-default_hidden_activation  = random
-mutate_hidden_activation   = True
+default_hidden_activation  = clipped_relu
+mutate_hidden_activation   = False
 default_output_activation  = identity
 mutate_output_activation   = False
 relu_clip_at               = 1
