--- a/config.ini
+++ b/config.ini
@@ -29,7 +29,7 @@ interspecies_mating_count    = 2
 distance_threshold          = 7
 init_species_stabilization  = 5
 init_species_max_tries      = 50
-distance_adj_factor         = 0.125
+distance_adj_factor         = 0.0625
 disjoint_coefficient        = 4.0
 excess_coefficient          = 3.0
 weight_diff_coefficient     = 1.0
@@ -50,11 +50,11 @@ neuron_add_chance          = 0.0033
 neuron_toggle_chance       = 0
 bias_mutate_chance         = 0.75
 max_abs_bias_mutate_factor = 1.5
-bias_init_range            = -0.0, 0.0
+bias_init_range            = -1.0, 1.0
 bias_perturb_vs_set_chance = 0.75
 activation_mutate_chance   = 0.1
-default_hidden_activation  = clipped_relu
-mutate_hidden_activation   = False
+default_hidden_activation  = random
+mutate_hidden_activation   = True
 default_output_activation  = identity
 mutate_output_activation   = False
 relu_clip_at               = 1
