--- a/config.ini
+++ b/config.ini
@@ -3,17 +3,20 @@
 
 [DEFAULT]
 # EVOLUTION
-generations       = 2500
-population_size   = 500
-fitness_offset    = 1000
-environment_steps = 500
+generations       = 1500
+population_size   = 50
 
 # NEURAL NETWORK
 input_neurons             = 8
 hidden_neurons            = 1
 output_neurons            = 4
 initial_connections_quota = 1
-refractory_factor         = 0.5
+refractory_factor         = 0.66
+
+# ENVIROMENT
+fitness_offset  = 1000
+max_env_steps   = 500
+batch_size      = 1
 
 # SPECIES
 elites_per_species           = 1
@@ -30,10 +33,11 @@ distance_threshold          = 10
 init_species_stabilization  = 5
 init_species_max_tries      = 50
 distance_adj_factor         = 0.0625
-disjoint_coefficient        = 8.0
-excess_coefficient          = 4.0
-weight_diff_coefficient     = 1.0
-activation_diff_coefficient = 2.0
+bias_diff_coefficient       = 1.0
+weight_diff_coefficient     = 2.0
+activation_diff_coefficient = 4.0
+excess_coefficient          = 8.0
+disjoint_coefficient        = 16.0
 
 # CONNECTION GENE MUTATION
 max_to_attempts_factor              = 5
@@ -46,7 +50,7 @@ weight_init_range                   = -10.0, 10.0
 weight_perturb_vs_set_chance        = 0.75
 
 # NEURON GENE MUTATION
-neuron_add_chance          = 0.0033
+neuron_add_chance          = 0.0066
 neuron_toggle_chance       = 0.00033
 bias_mutate_chance         = 0.75
 max_abs_bias_mutate_factor = 1.5
@@ -60,11 +64,8 @@ mutate_output_activation   = False
 relu_clip_at               = 1
 
 # RUNTIME
-# serial, parallel, dumb
-run_mode                 = parallel
+run_mode                 = parallel # serial, parallel, dumb
 parallelization          = 8
-
-# None, human, rgb_array
-render_mode              = None
+render_mode              = human # human, rgb_array
 environment_seed         = 1212
 population_save_interval = 10
