--- a/config.ini
+++ b/config.ini
@@ -3,8 +3,8 @@
 
 [DEFAULT]
 # EVOLUTION
-generations       = 300
-population_size   = 10000
+generations     = 5
+population_size = 50
 
 # NEURAL NETWORK
 input_neurons             = 8
@@ -12,11 +12,6 @@ hidden_neurons            = 1
 output_neurons            = 4
 initial_connections_quota = 0.5
 refractory_factor         = 0.5
-
-# ENVIROMENT
-fitness_offset  = 1000
-max_env_steps   = 500
-batch_size      = 1
 
 # SPECIES
 elites_per_species           = 1
@@ -63,8 +58,13 @@ default_output_activation  = identity
 mutate_output_activation   = False
 relu_clip_at               = 1
 
+# ENVIROMENT
+fitness_offset = 1000
+max_env_steps  = 500
+batch_size     = 2
+
 # RUNTIME
-run_mode                 = parallel # serial, parallel, dumb
+run_mode                 = serial # serial, parallel, dumb
 parallelization          = 8
 render_mode              = human # human, rgb_array
 environment_seed         = 1212
