might be working batches

--- a/config.ini
+++ b/config.ini
@@ -3,7 +3,7 @@
 
 [DEFAULT]
 # RUNTIME
-run_mode                 = serial # serial, parallel, dumb
+run_mode                 = parallel # serial, parallel, dumb
 parallelization          = 8
 render_mode              = human # human, rgb_array
 environment_seed         = 1212
@@ -12,23 +12,23 @@ population_save_interval = 10
 # ENVIROMENT
 fitness_offset = 10000
 max_env_steps  = 500
-batch_size     = 20
+batch_size     = 50
 
 # EVOLUTION
 generations     = 200
-population_size = 20
+population_size = 500
 
 # NEURAL NETWORK
 input_neurons             = 8
 hidden_neurons            = 1
 output_neurons            = 4
-initial_connections_quota = 0.66
+initial_connections_quota = 1
 refractory_factor         = 0.66
 
 # SPECIES
 elites_per_species           = 1
 min_species                  = 3
-target_species               = 5
+target_species               = 10
 max_stagnation               = 20
 keep_best_species            = 1
 keep_best_genomes_in_species = 0.5
@@ -53,7 +53,7 @@ connection_toggle_chance            = 0.01
 matching_disabled_connection_chance = 0.75
 weight_mutate_chance                = 0.75
 max_abs_weight_mutate_factor        = 1.5
-weight_init_range                   = -10.0, 10.0
+weight_init_range                   = -1.0, 1.0
 weight_perturb_vs_set_chance        = 0.75
 
 # NEURON GENE MUTATION
@@ -61,7 +61,7 @@ neuron_add_chance          = 0.01
 neuron_toggle_chance       = 0
 bias_mutate_chance         = 0.75
 max_abs_bias_mutate_factor = 1.5
-bias_init_range            = -10.0, 10.0
+bias_init_range            = -1.0, 1.0
 bias_perturb_vs_set_chance = 0.75
 activation_mutate_chance   = 0.05
 default_hidden_activation  = random
