--- a/config.ini
+++ b/config.ini
@@ -5,8 +5,6 @@
 # RUNTIME
 run_mode                 = parallel # serial, parallel, dumb
 parallelization          = 8
-render_mode              = human # human, rgb_array
-environment_seed         = 1212
 population_save_interval = 10
 
 # EVOLUTION
@@ -14,9 +12,11 @@ generations     = 500
 population_size = 500
 
 # ENVIROMENT
-fitness_offset = 50000
-max_env_steps  = 500
-batch_size     = 100
+fitness_offset   = 50000
+max_env_steps    = 500
+batch_size       = 50
+environment_seed = 1212 # must be greater than batch size
+render_mode      = human # human, rgb_array
 
 # NEURAL NETWORK
 input_neurons             = 8
@@ -51,18 +51,18 @@ max_to_attempts_factor              = 6
 connection_add_chance               = 0.25
 connection_toggle_chance            = 0.01
 matching_disabled_connection_chance = 0.75
-weight_mutate_chance                = 0.66
+weight_mutate_chance                = 0.75
 max_abs_weight_mutate_factor        = 1.5
 weight_init_range                   = -1.0, 1.0
-weight_perturb_vs_set_chance        = 0.66
+weight_perturb_vs_set_chance        = 0.75
 
 # NEURON GENE MUTATION
 neuron_add_chance          = 0.001
 neuron_toggle_chance       = 0
-bias_mutate_chance         = 0.66
+bias_mutate_chance         = 0.75
 max_abs_bias_mutate_factor = 1.5
 bias_init_range            = -1.0, 1.0
-bias_perturb_vs_set_chance = 0.66
+bias_perturb_vs_set_chance = 0.75
 activation_mutate_chance   = 0.66
 default_hidden_activation  = random
 mutate_hidden_activation   = True
