--- a/config.ini
+++ b/config.ini
@@ -3,18 +3,18 @@
 
 [DEFAULT]
 # RUNTIME
-run_mode                 = parallel # serial, parallel, dumb
+run_mode                 = serial # serial, parallel, dumb
 parallelization          = 8
 population_save_interval = 10
 
 # EVOLUTION
-generations     = 500
-population_size = 500
+generations     = 2
+population_size = 10
 
 # ENVIROMENT
 fitness_offset   = 50000
 max_env_steps    = 500
-batch_size       = 50
+batch_size       = 2
 environment_seed = 1212 # must be greater than batch size
 render_mode      = human # human, rgb_array
 
