--- a/config.ini
+++ b/config.ini
@@ -3,19 +3,19 @@
 
 [DEFAULT]
 # RUNTIME
-run_mode                 = serial # serial, parallel, dumb
-parallelization          = 8
+run_mode                 = parallel # serial, parallel, dumb
+procs          = 8
 population_save_interval = 10
 
 # EVOLUTION
-generations     = 2
-population_size = 2
+generations     = 200
+population_size = 200
 
 # ENVIROMENT
-batch_size       = 2
+batch_size       = 20
 max_env_steps    = 500
-fitness_offset   = 50000
-environment_seed = 1212  # must be greater than batch size
+fitness_offset   = 20000
+env_seed = 1212  # must be greater than batch size
 render_mode      = human # human, rgb_array
 
 # NEURAL NETWORK
