fixing duplicate connections

--- a/config.ini
+++ b/config.ini
@@ -3,17 +3,17 @@
 
 [DEFAULT]
 # RUNTIME
-run_mode                 = parallel # serial, parallel, dumb
-procs          = 8
+run_mode                 = serial # serial, parallel, dumb
+procs                    = 8
 population_save_interval = 10
 
 # EVOLUTION
-generations     = 500
-population_size = 1000
+generations     = 100
+population_size = 500
 
 # ENVIROMENT
-batch_size       = 50
-max_env_steps    = 500
+batch_size       = 1
+max_env_steps    = 400
 fitness_offset   = 2000
 env_seed = 1212  # must be greater than batch size
 render_mode      = human # human, rgb_array
@@ -22,13 +22,13 @@ render_mode      = human # human, rgb_array
 input_neurons             = 8
 hidden_neurons            = 1
 output_neurons            = 4
-initial_connections_quota = 0.66
+initial_connections_quota = 1
 refractory_factor         = 0.5
 
 # SPECIES
 elites_per_species           = 1
 min_species                  = 3
-target_species               = 20
+target_species               = 5
 max_stagnation               = 20
 keep_best_species            = 1
 keep_best_genomes_in_species = 0.33
@@ -48,7 +48,7 @@ disjoint_coefficient        = 16.0
 
 # CONNECTION GENE MUTATION
 max_to_attempts_factor              = 6
-connection_add_chance               = 0.75
+connection_add_chance               = 1
 connection_toggle_chance            = 0.02
 matching_disabled_connection_chance = 0.75
 weight_mutate_chance                = 0.75
