--- a/config.ini
+++ b/config.ini
@@ -3,20 +3,20 @@
 
 [DEFAULT]
 # RUNTIME
-run_mode                 = serial # serial, parallel, dumb
+run_mode                 = parallel # serial, parallel, dumb
 procs                    = 8
 population_save_interval = 10
 
 # EVOLUTION
 generations     = 100
-population_size = 500
+population_size = 1000
 
 # ENVIROMENT
-batch_size       = 1
-max_env_steps    = 400
-fitness_offset   = 2000
-env_seed = 1212  # must be greater than batch size
-render_mode      = human # human, rgb_array
+batch_size     = 50
+max_env_steps  = 400
+fitness_offset = 2000
+env_seed       = 1212  # must be greater than batch size
+render_mode    = human # human, rgb_array
 
 # NEURAL NETWORK
 input_neurons             = 8
@@ -28,42 +28,42 @@ refractory_factor         = 0.5
 # SPECIES
 elites_per_species           = 1
 min_species                  = 3
-target_species               = 5
+target_species               = 10
 max_stagnation               = 20
 keep_best_species            = 1
-keep_best_genomes_in_species = 0.33
+keep_best_genomes_in_species = 0.5
 allow_interspecies_mating    = False
 interspecies_mating_count    = 2
 
 #  DISTANCE
 distance_threshold          = 23
 init_species_stabilization  = 5
-init_species_max_tries      = 40
+init_species_max_tries      = 50
 distance_adj_factor         = 0.0625
 weight_diff_coefficient     = 1.0
-bias_diff_coefficient       = 2.0
-activation_diff_coefficient = 4.0
+bias_diff_coefficient       = 1.0
+activation_diff_coefficient = 1.0
 excess_coefficient          = 8.0
 disjoint_coefficient        = 16.0
 
 # CONNECTION GENE MUTATION
 max_to_attempts_factor              = 6
-connection_add_chance               = 1
+connection_add_chance               = 0.75
 connection_toggle_chance            = 0.02
 matching_disabled_connection_chance = 0.75
 weight_mutate_chance                = 0.75
-max_abs_weight_mutate_factor        = 1.5
-weight_init_range                   = -1.0, 1.0
+max_abs_weight_mutate_factor        = 2
+weight_init_range                   = -10.0, 10.0
 weight_perturb_vs_set_chance        = 0.75
 
 # NEURON GENE MUTATION
-neuron_add_chance          = 0.001
+neuron_add_chance          = 0.0005
 neuron_toggle_chance       = 0
 bias_mutate_chance         = 0.75
-max_abs_bias_mutate_factor = 1.5
-bias_init_range            = -1.0, 1.0
+max_abs_bias_mutate_factor = 2
+bias_init_range            = -10.0, 10.0
 bias_perturb_vs_set_chance = 0.75
-activation_mutate_chance   = 0.66
+activation_mutate_chance   = 0.75
 default_hidden_activation  = random
 mutate_hidden_activation   = True
 default_output_activation  = identity
