fixing blood bath

--- a/config.ini
+++ b/config.ini
@@ -3,16 +3,16 @@
 
 [DEFAULT]
 # RUNTIME
-run_mode                 = parallel # serial, parallel, dumb
+run_mode                 = serial # serial, parallel, dumb
 procs                    = 8
 population_save_interval = 10
 
 # EVOLUTION
-generations     = 100
-population_size = 50
+generations     = 1
+population_size = 1
 
 # ENVIROMENT
-batch_size     = 1
+batch_size     = 2
 max_env_steps  = 500
 fitness_offset = 0
 env_seed       = 1212  # must be greater than batch size
@@ -31,13 +31,13 @@ min_species                  = 3
 target_species               = 5
 max_stagnation               = 20
 keep_best_species            = 1
-keep_best_genomes_in_species = 0.5
+keep_best_genomes_in_species = 0.33
 allow_interspecies_mating    = False
 interspecies_mating_count    = 2
 
 #  DISTANCE
-distance_threshold          = 24
-init_species_stabilization  = 3
+distance_threshold          = 2
+init_species_stabilization  = 5
 init_species_max_tries      = 50
 distance_adj_factor         = 0.0625
 weight_diff_coefficient     = 1.0
