--- a/config.ini
+++ b/config.ini
@@ -3,18 +3,18 @@
 
 [DEFAULT]
 # RUNTIME
-run_mode                 = serial # serial, parallel, dumb
+run_mode                 = parallel # serial, parallel, dumb
 procs                    = 8
 population_save_interval = 10
 
 # EVOLUTION
-generations     = 1
-population_size = 1
+generations     = 250
+population_size = 500
 
 # ENVIROMENT
-batch_size     = 2
+batch_size     = 50
 max_env_steps  = 500
-fitness_offset = 0
+fitness_offset = 200
 env_seed       = 1212  # must be greater than batch size
 render_mode    = human # human, rgb_array
 
@@ -43,8 +43,8 @@ distance_adj_factor         = 0.0625
 weight_diff_coefficient     = 1.0
 bias_diff_coefficient       = 1.0
 activation_diff_coefficient = 1.0
-excess_coefficient          = 1.0
-disjoint_coefficient        = 1.0
+excess_coefficient          = 2.0
+disjoint_coefficient        = 2.0
 
 # CONNECTION GENE MUTATION
 max_to_attempts_factor              = 6
