--- a/config.ini
+++ b/config.ini
@@ -9,11 +9,11 @@ population_save_interval = 10
 
 # EVOLUTION
 generations     = 400
-population_size = 400
+population_size = 500
 
 # ENVIROMENT
-batch_size     = 40
-max_env_steps  = 400
+batch_size     = 50
+max_env_steps  = 500
 fitness_offset = 2000
 env_seed       = 1212  # must be greater than batch size
 render_mode    = human # human, rgb_array
@@ -31,20 +31,20 @@ min_species                  = 3
 target_species               = 10
 max_stagnation               = 20
 keep_best_species            = 1
-keep_best_genomes_in_species = 0.33
+keep_best_genomes_in_species = 0.5
 allow_interspecies_mating    = False
 interspecies_mating_count    = 2
 
 #  DISTANCE
 distance_threshold          = 5
-init_species_stabilization  = 10
-init_species_max_tries      = 50
+init_species_stabilization  = 20
+init_species_max_tries      = 100
 distance_adj_factor         = 0.0625
-weight_diff_coefficient     = 1.0
-bias_diff_coefficient       = 1.0
-activation_diff_coefficient = 2.0
-excess_coefficient          = 3.0
-disjoint_coefficient        = 3.0
+weight_diff_coefficient     = 1 # 1
+bias_diff_coefficient       = 1 # 1
+activation_diff_coefficient = 2 # 2
+excess_coefficient          = 3 # 3
+disjoint_coefficient        = 3 # 3
 
 # CONNECTION GENE MUTATION
 max_to_attempts_factor              = 6
@@ -53,15 +53,15 @@ connection_toggle_chance            = 0.02
 matching_disabled_connection_chance = 0.75
 weight_mutate_chance                = 0.75
 max_abs_weight_mutate_factor        = 2
-weight_init_range                   = -1.0, 1.0
+weight_init_range                   = -10.0, 10.0
 weight_perturb_vs_set_chance        = 0.75
 
 # NEURON GENE MUTATION
-neuron_add_chance          = 0.0005
+neuron_add_chance          = 0.001
 neuron_toggle_chance       = 0
 bias_mutate_chance         = 0.75
 max_abs_bias_mutate_factor = 2
-bias_init_range            = -1.0, 1.0
+bias_init_range            = -10.0, 10.0
 bias_perturb_vs_set_chance = 0.75
 activation_mutate_chance   = 0.75
 default_hidden_activation  = random
