--- a/config.ini
+++ b/config.ini
@@ -24,6 +24,10 @@ hidden_neurons            = 1
 output_neurons            = 4
 initial_connections_quota = 1
 refractory_factor         = 0.66
+default_hidden_activation = random   # 1) one of the available activations in ActivationFunctions or 2) "random" (randomly assign one of the brain_functions())
+default_output_activation = identity # 1) one of the available activations in ActivationFunctions or 2) "random" (randomly assign one of the bipolar_functions())
+mutate_hidden_activations = True
+mutate_output_activations = False
 
 # SPECIES
 elites_per_species           = 1
@@ -43,13 +47,13 @@ distance_adj_factor         = 0.0625
 weight_diff_coefficient     = 1   # 1
 bias_diff_coefficient       = 1.5 # 1
 activation_diff_coefficient = 2   # 2
-excess_coefficient          = 2.5 # 3
-disjoint_coefficient        = 3   # 3
+excess_diff_coefficient          = 2.5 # 3
+disjoint_diff_coefficient        = 3   # 3
 
 # CONNECTION GENE MUTATION
 max_to_attempts_factor              = 6
 connection_add_chance               = 0.66
-connection_toggle_chance            = 0.05
+connection_toggle_chance            = 0.025
 matching_disabled_connection_chance = 0.75
 weight_mutate_chance                = 0.75
 max_abs_weight_mutate_factor        = 2
@@ -64,8 +68,4 @@ max_abs_bias_mutate_factor = 2
 bias_init_range            = -10.0, 10.0
 bias_perturb_vs_set_chance = 0.75
 activation_mutate_chance   = 0.75
-default_hidden_activation  = random
-mutate_hidden_activation   = True
-default_output_activation  = identity
-mutate_output_activation   = False
 relu_clip_at               = 1
