--- a/config.ini
+++ b/config.ini
@@ -12,22 +12,23 @@ generations     = 1000
 population_size = 200
 
 # ENVIROMENT
-batch_size     = 40
-max_env_steps  = 600
-fitness_offset = 2000
-env_seed       = 1212  # must be greater than batch size
-render_mode    = human # human, rgb_array
+env_specific      = '"BipedalWalker-v2", hardcore=True'
+max_episode_steps = 2000
+batch_size        = 40
+fitness_offset    = 2000
+env_seed          = 1212  # must be greater than batch size
+render_mode       = human # human, rgb_array
 
 # NEURAL NETWORK
-input_neurons             = 8
+input_neurons             = 24
 hidden_neurons            = 1
 output_neurons            = 4
 initial_connections_quota = 1
 refractory_factor         = 0.66
-default_hidden_activation = random   # 1) one of the available activations in ActivationFunctions or 2) "random" (randomly assign one of the brain_functions())
-default_output_activation = identity # 1) one of the available activations in ActivationFunctions or 2) "random" (randomly assign one of the bipolar_functions())
+default_hidden_activation = random # 1) one of the available activations in ActivationFunctions or 2) "random" (randomly assign one of the brain_functions())
+default_output_activation = random # 1) one of the available activations in ActivationFunctions or 2) "random" (randomly assign one of the bipolar_functions())
 mutate_hidden_activations = True
-mutate_output_activations = False
+mutate_output_activations = True
 
 # SPECIES
 elites_per_species           = 1
