new algo for inital conn

--- a/config.ini
+++ b/config.ini
@@ -23,7 +23,7 @@ render_mode       = human # human, rgb_array
 input_neurons             = 24
 hidden_neurons            = 14
 output_neurons            = 4
-initial_connections_quota = 1
+min_connections_quota     = 0.33
 refractory_factor         = 0.66
 default_hidden_activation = random # 1) one of the available activations in ActivationFunctions or 2) "random" (randomly assign one of the brain_functions())
 default_output_activation = random # 1) one of the available activations in ActivationFunctions or 2) "random" (randomly assign one of the bipolar_functions())
